--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "nuxt-vuetify-node",
+  "version": "0.0.1",
   "dependencies": {
     "@nuxtjs/axios": "^5.13.1",
     "core-js": "^3.9.1",
