--- a/package.json
+++ b/package.json
@@ -8,12 +8,12 @@
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "markdown-it": "^12.0.6",
-    "markdown-it-attrs": "^4.0.0"
+    "markdown-it-attrs": "^4.0.0",
+    "@nuxtjs/vuetify": "^1.11.3"
   },
   "devDependencies": {
     "@nuxt/types": "^2.15.3",
     "@nuxt/typescript-build": "^2.1.0",
-    "@nuxtjs/vuetify": "^1.11.3",
     "@vue/test-utils": "^1.1.3",
     "babel-core": "7.0.0-bridge.0",
     "babel-jest": "^26.6.3",
